correct imgs path

--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
                 <h1>Para compradores...</h1>
                 <div class="items">
                     <div class="item">
-                        <img src="/images/compra1.svg" alt="pesquise o produdo">
+                        <img src="images/compra1.svg" alt="pesquise o produdo">
                         <h3>Pesquise o produto</h3>
                     </div>
                     <div class="item">
-                        <img src="/images/compra2.svg" alt="compare o preço">
+                        <img src="images/compra2.svg" alt="compare o preço">
                         <h3>Compare o preço</h3>
                     </div>
                     <div class="item">
-                        <img src="/images/compra3.svg" alt="contate o vendedor">
+                        <img src="images/compra3.svg" alt="contate o vendedor">
                         <h3>Contate o vendedor</h3>
                     </div>
                     <div class="item">
-                        <img src="/images/compra4.svg" alt="receba o produto">
+                        <img src="images/compra4.svg" alt="receba o produto">
                         <h3>Receba o produto</h3>
                     </div>
                 </div>
@@ -74,19 +74,19 @@
                     <h1>Para Vendedores...</h1>
                     <div class="items">
                         <div class="item">
-                            <img src="/images/venda1.svg" alt="Cadastre o produto">
+                            <img src="images/venda1.svg" alt="Cadastre o produto">
                             <h3>Cadastre o produto</h3>
                         </div>
                         <div class="item">
-                            <img src="/images/venda2.svg" alt="Disponibilize as formas de pagamento">
+                            <img src="images/venda2.svg" alt="Disponibilize as formas de pagamento">
                             <h3>Disponibilize as formas de pagamento</h3>
                         </div>
                         <div class="item">
-                            <img src="/images/venda3.svg" alt="Realize o atendimento">
+                            <img src="images/venda3.svg" alt="Realize o atendimento">
                             <h3>Realize o atendimento</h3>
                         </div>
                         <div class="item">
-                            <img src="/images/venda4.svg" alt="Receba o dinheiro">
+                            <img src="images/venda4.svg" alt="Receba o dinheiro">
                             <h3>Receba o dinheiro</h3>
                         </div>
                     </div>
@@ -98,10 +98,10 @@
                     <p>Venda, compre ou troque produtos e serviços <br /> sem sair da universidade</p>
                 </div>
                 <div class="social">
-                    <img src="/images/social/facebook.svg" alt="facebook">
-                    <img src="/images/social/whatsapp.svg" alt="whatsapp">
-                    <img src="/images/social/twitter.svg" alt="twitter">
-                    <img src="/images/social/instagram.svg" alt="instagram">               
+                    <img src="images/social/facebook.svg" alt="facebook">
+                    <img src="images/social/whatsapp.svg" alt="whatsapp">
+                    <img src="images/social/twitter.svg" alt="twitter">
+                    <img src="images/social/instagram.svg" alt="instagram">               
                     
                 </div>
             </footer>
