--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <body>
         <header>
             <nav>
-                <div class="brand">UniShop</div>
+                <div class="brand">
+                    <a href="#">UniShop</a>
+                </div>
                 <div class="menu">
                     <div class="menu-item">
                        <a href="#comprar">Comprar</a> 
@@ -97,6 +99,11 @@
                     <br/>
                     <p>Venda, compre ou troque produtos e serviços <br /> sem sair da universidade</p>
                 </div>
+                <div class="doc">
+                    <a href="https://github.com/Afonso3180/UniShop">Documentação</a>
+                </div>
+                    
+                
                 <div class="social">
                     <img src="images/social/facebook.svg" alt="facebook">
                     <img src="images/social/whatsapp.svg" alt="whatsapp">
