--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <p>Venda, compre ou troque produtos e serviços <br /> sem sair da universidade</p>
                 </div>
                 <div class="doc">
-                    <a href="https://afonso3180.github.io/UniShop/documentacao">Documentação</a>
+                    <a href="documentacao.html">Documentação</a>
                 </div>
                     
                 
