--- a/index.html
+++ b/index.html
@@ -47,11 +47,9 @@
                         </div>
                 </div>
             </div>
-
-            <div class="overlay"></div>
         </header>
         <main>
-            <article id="comprar" class="comprar">
+            <section id="comprar" class="comprar">
                 <h1>Para compradores...</h1>
                 <div class="items">
                     <div class="item">
@@ -71,8 +69,8 @@
                         <h3>Receba o produto</h3>
                     </div>
                 </div>
-            </article>
-            <article id="vender" class="vender">
+            </section>
+            <section id="vender" class="vender">
                     <h1>Para Vendedores...</h1>
                     <div class="items">
                         <div class="item">
@@ -92,7 +90,7 @@
                             <h3>Receba o dinheiro</h3>
                         </div>
                     </div>
-            </article>
+            </section>
             <footer id="contato">
                 <div class="content">
                     <h1>UniShop</h1>
