included equipe section

--- a/documentacao.html
+++ b/documentacao.html
@@ -1,28 +1,38 @@
-<DOCTYPE! html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <meta charset = 'UTF-8'/>
-        <title>Documentação</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>UniShop</title>
+        <link rel="stylesheet" href="style.css" />
     </head>
-
     <body>
-        <h1>Documentação</h1>
+        <main class="documentacao">
+            <h1>Documentação</h1>
 
-        <p>
-            "Seja fome ou grana apertada, faça chuva ou faça sol, a marketplace ideal para quem passa o dia estudando!"
-        </p>
-        <p>O que é?</p>
-        <p><strong>UniShop</strong> é um software de marketplace que visa facilitar e simplificar a interação e o processo de venda de produtos entre o vendedor e comprador.</p>
-        <p>Equipe:</p>
-        <ul>
-            <li>Afonso Ramos Garcia Neto</li>
-            <li>Danilo Souza Frazão</li>
-            <li>Ícaro Santos Pereira</li>
-            <li>João Vitor Matos dos Santos</li>
-            <li>Willians Amaral de Oliveira</li>
-        </ul>
-        <p>Diagrama de Atividades:</p>
-        <img src = 'images/diagrama_mps.png'
+            <p>
+                "Seja fome ou grana apertada, faça chuva ou faça sol, a
+                marketplace ideal para quem passa o dia estudando!"
+            </p>
+            <h2>O que é?</h2>
+            <p>
+                <strong>UniShop</strong> é um software de marketplace que visa
+                facilitar e simplificar a interação e o processo de venda de
+                produtos entre o vendedor e comprador.
+            </p>
+            <h2>Equipe:</h2>
+            <ul>
+                <li>Afonso Ramos Garcia Neto</li>
+                <li>Danilo Souza Frazão</li>
+                <li>Ícaro Santos Pereira</li>
+                <li>João Vitor Matos dos Santos</li>
+                <li>Willians Amaral de Oliveira</li>
+            </ul>
+            <h2>Diagrama de Atividades:</h2>
+            <img src="images/diagrama_mps.png" />
+            <h2>Diagrama de Atividades v2:</h2>
+            <img src="images/diagrama_mps_2.jpeg" />
+        </main>
     </body>
-
 </html>
