--- a/documentacao.html
+++ b/documentacao.html
@@ -33,6 +33,8 @@
             <img src="images/diagrama_mps.png" />
             <h2>Diagrama de Atividades v2:</h2>
             <img src="images/diagrama_mps_2.jpeg" />
+            <h2>Requisitos Funcionais: </h2>
+            <img src = "images/requisitos_funcionais.png" />
         </main>
     </body>
 </html>
