--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="container">
                     <div class="avatar">
                         <figure>
-                            <img src="https://placekitten.com/300/306" alt="">
+                            <img src="images/afonso.jpeg"/>
                         </figure>
                         <div class="content">
                             <div class="head">Afonso Ramos</div>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="avatar">
                         <figure>
-                            <img src="https://placekitten.com/300/299" alt="">
+                            <img src="images/danilo.jpeg" />
                         </figure>
                         <div class="content">
                             <div class="head">Danilo Souza</div>
@@ -126,7 +126,7 @@
                     </div>
                     <div class="avatar">
                         <figure>
-                            <img src="https://placekitten.com/300/303" alt="">
+                            <img src="images/joao.jpeg"/>
                         </figure>
                         <div class="content">
                             <div class="head">João Vitor</div>
@@ -135,7 +135,7 @@
                     </div>
                     <div class="avatar">
                         <figure>
-                            <img src="https://placekitten.com/300/304" alt="">
+                            <img src="images/willians.jpeg"/>
                         </figure>
                         <div class="content">
                             <div class="head">Willians Oliveira</div>
