--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </div>
                     <div class="avatar">
                         <figure>
-                            <img src="images/danilo.jpeg" />
+                            <img src="images/danilo2.jpeg" />
                         </figure>
                         <div class="content">
                             <div class="head">Danilo Souza</div>
