--- a/documentacao.html
+++ b/documentacao.html
@@ -10,7 +10,8 @@
     <body>
         <main class="documentacao">
             <h1>Documentação</h1>
-
+                
+            <br>
             <p>
                 "Seja fome ou grana apertada, faça chuva ou faça sol, a
                 marketplace ideal para quem passa o dia estudando!"
@@ -30,11 +31,15 @@
                 <li>Willians Amaral de Oliveira</li>
             </ul>
             <h2>Diagrama de Atividades:</h2>
-            <img src="images/diagrama_mps.png" />
+            <img src="./UniShop_files/diagrama_mps.png">
             <h2>Diagrama de Atividades v2:</h2>
-            <img src="images/diagrama_mps_2.jpeg" />
+            <img src="./UniShop_files/diagrama_mps_2.jpeg">
             <h2>Requisitos Funcionais: </h2>
-            <img src = "images/requisitos_funcionais.png" />
+            <img src="./UniShop_files/requisitos_funcionais.png">
+            <h2>Requisitos Não Funcionais</h2>
+            <img src="./Unishop_files/RNF.png">
+            <h2>Regras de Negócio</h2>
+            <img src="./Unishop_files/Regras_de_negocio.png">
         </main>
     </body>
 </html>
