--- a/documentacao.html
+++ b/documentacao.html
@@ -33,13 +33,13 @@
             <h2>Diagrama de Atividades:</h2>
             <img src="images/diagrama_mps.png">
             <h2>Diagrama de Atividades v2:</h2>
-            <img src="./UniShop_files/diagrama_mps_2.jpeg">
+            <img src="images/diagrama_mps_2.jpeg">
             <h2>Requisitos Funcionais: </h2>
-            <img src="./UniShop_files/requisitos_funcionais.png">
+            <img src="images/requisitos_funcionais.png">
             <h2>Requisitos Não Funcionais</h2>
-            <img src="./Unishop_files/RNF.png">
+            <img src="images/RNF.png">
             <h2>Regras de Negócio</h2>
-            <img src="./Unishop_files/Regras_de_negocio.png">
+            <img src="images/Regras_de_negocio.png">
         </main>
     </body>
 </html>
