--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     </div>
                     <div class="avatar">
                         <figure>
-                            <img src="https://placekitten.com/300/297" alt="">
+                            <img src="images/Icaro.jpeg"/>
                         </figure>
                         <div class="content">
                             <div class="head">Ícaro Santos</div>
