--- a/documentacao.html
+++ b/documentacao.html
@@ -31,15 +31,15 @@
                 <li>Willians Amaral de Oliveira</li>
             </ul>
             <h2>Diagrama de Atividades:</h2>
-            <img src="images/diagrama_mps.png" width = '750' height = '500'>
+            <img src="images/diagrama_mps.png" width = "100" height = "100"/>
             <h2>Diagrama de Atividades v2:</h2>
-            <img src="images/diagrama_mps_2.jpeg" width = '750' height = '500'>
+            <img src="images/diagrama_mps_2.jpeg" width = '750' height = '500'/>
             <h2>Requisitos Funcionais: </h2>
-            <img src="images/requisitos_funcionais.png" width = '750' height = '500'>
+            <img src="images/requisitos_funcionais.png" width = '750' height = '500'/>
             <h2>Requisitos Não Funcionais</h2>
-            <img src="images/RNF.png" width = '750' height = '500'>
+            <img src="images/RNF.png" width = '750' height = '500'/>
             <h2>Regras de Negócio</h2>
-            <img src="images/Regras_de_negocio.png" width = '750' height = '500'>
+            <img src="images/Regras_de_negocio.png" width = '750' height = '500'/>
         </main>
     </body>
 </html>
