--- a/documentacao.html
+++ b/documentacao.html
@@ -62,7 +62,7 @@
                 <li>Willians Amaral de Oliveira</li>
             </ul>
             <h2>Diagrama de Atividades:</h2>
-            <img src="images/diagrama_mps.png">
+            <img src="images/diagrama_mps.png" width = "100" height = "200">
             <h2>Diagrama de Atividades v2:</h2>
             <img src="images/diagrama_mps_2.jpeg">
             <h2>Requisitos Funcionais: </h2>
