--- a/documentacao.html
+++ b/documentacao.html
@@ -62,23 +62,23 @@
                 <li>Willians Amaral de Oliveira</li>
             </ul>
             <h2>Diagrama de Atividades:</h2>
-            <div style='position:absolute;margin-left:10px;margin-top:10px;width:300px;height:140px'>
+            <div style='margin-left:10px;margin-top:10px;width:300px;height:140px'>
                 <img src="images/diagrama_mps.png">
             </div>
             <h2>Diagrama de Atividades v2:</h2>
-            <div style='position:absolute;margin-left:10px;margin-top:10px;width:300px;height:140px'>
+            <div style='margin-left:10px;margin-top:10px;width:300px;height:140px'>
                 <img src="images/diagrama_mps_2.jpeg">
             </div>
             <h2>Requisitos Funcionais:</h2>
-            <div style='position:absolute;margin-left:10px;margin-top:10px;width:300px;height:140px'>
+            <div style='margin-left:10px;margin-top:10px;width:300px;height:140px'>
                 <img src="images/requisitos_funcionais.png">
             </div>
             <h2>Requisitos Não Funcionais:</h2>
-            <div style='position:absolute;margin-left:10px;margin-top:10px;width:300px;height:140px'>
+            <div style='margin-left:10px;margin-top:10px;width:300px;height:140px'>
                 <img src="images/RNF.png">
             </div>
             <h2>Regras de Negócio:</h2>
-            <div style='position:absolute;margin-left:10px;margin-top:10px;width:300px;height:140px'>
+            <div style='margin-left:10px;margin-top:10px;width:300px;height:140px'>
                 <img src="images/Regras_de_negocio.png">
             </div>
         </main>
