add break for print

--- a/documentacao.html
+++ b/documentacao.html
@@ -9,6 +9,9 @@
     </head>
     <body>
         <main class="documentacao">
+            <article>
+                <h1>Capa do trabalho e bla bla bla</h1>
+            </article>
             <h1>Documentação</h1>
 
             <p>
