--- a/glossario.html
+++ b/glossario.html
@@ -37,11 +37,11 @@
             <h2>R</h2><hr>
                 <h3>Regras de Negócio</h3>
                 <p>Regra de Negócio (RN) é toda norma ou tudo aquilo que a lei ou o uso comum determina a respeito de qualquer transação que envolve uma determinada organização. Portanto, regra de negócio é uma diretriz destinada a regulamentar o comportamento do negócio. Sob a perspectiva de SI, regra de negócio é: "uma declaração que define ou restringe algum aspecto do negócio". Neste contexto regras de negócio são usualmente definidas como restrições ou metadados sobre operações de negócio, e também são conhecidas como regras do domínio da aplicação, ou regras de minimundo. As RN expressam declarações que são "elementos-chave na definição das intenções e necessidades do negócio, ou reflexões de como a organização trabalha ou como pretende trabalhar no futuro" (SOMMERVILLE, 2011).</p>
-                <h3>Requesitos</h3>
+                <h3>Requisitos</h3>
                 <p>Os requisitos de um sistema são descrições dos serviços fornecidos pelo sistema e as suas restrições operacionais. Esses requisitos refletem as necessidades dos clientes de um sistema que ajuda a resolver algum problema, por exemplo, controlar um dispositivo, enviar um pedido ou encontrar informações (SOMMERVILLE,2011).</p>
-                <h3>Requesitos Funcionais</h3>
+                <h3>Requisitos Funcionais</h3>
                 <p>Os requisitos funcionais são declarações que o sistema deve fornecer, de como o sistema deve reagir a entradas específicas e de como o sistema deve se comportar em determinadas situações (SOMMERVILLE,2011).</p>
-                <h3>Requesitos Não Funcionais</h3>
+                <h3>Requisitos Não Funcionais</h3>
                 <p>São restrições aos serviços ou funções oferecidos pelo sistema. Incluem restrições de timing, restrições no processo de desenvolvimento e restrições im postas pelas normas (SOMMERVILLE,2011).</p>
             <h2>S</h2><hr>
                 <h3>Sistema</h3>
