Edit glossario, modelagem, requisitos

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         </figure>
                         <div class="content">
                             <div class="head">Ícaro Santos</div>
-                            <div class="subhead">Chief Technology Officer</div>                          
+                            <div class="subhead">Jovem Aprendiz</div>                          
                         </div>
                     </div>
                     <div class="avatar">
