--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     </div>
                     <div class="avatar">
                         <figure>
-                            <img src="images/Icaro.jpeg"/>
+                            <img src="images/icaro.jpeg"/>
                         </figure>
                         <div class="content">
                             <div class="head">Ícaro Santos</div>
