--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <div class="content">
                     <h1>UniShop</h1>
                     <br/>
-                    <p>Compre ou venda produtos sem sair da universidade</p>
+                    <p>Compre ou venda produtos sem sair da universidade!</p>
                 </div>
                 <div class="doc">
                     <a href="docs/">Documentação</a>
